# bober23

./: .coverage  Bookkeeper.db  Bookkeeper_test.db  README.md  pyproject.toml  report.html
bookkeepersq3/: Bookkeeper.db  data.py  main.py
bookkeepersq3/view/: exception.ui  new_category.ui  new_operation.ui  set_budget.ui  ui_delete_operation.py  ui_exception.py  ui_main.py  ui_main.ui  ui_new_category.py  ui_new_operation.py  ui_set_budget.py
tests/: test_main.py
