[tool.poetry]
name = "bookkeepersq3"
version = "0.1.0"
description = ""
authors = ["игорь <leo.semenov1980@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
datetime = "^5.5"
pyside6 = "^6.6.3.1"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pylint = "^3.1.0"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
